--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "async": "^2.5.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "clientjs": "^0.1.11",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
