--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "cryptr": "^2.0.0",
     "device": "^0.3.8",
     "express": "^4.15.3",
     "express-session": "^1.15.4",
